FIX: fixed overflow in client section

--- a/css/app.css
+++ b/css/app.css
@@ -404,6 +404,7 @@ main section:not(.hero, .designit-section) {
     background-color: #F5F5F5;
     padding: 40px;
     height: calc(100vw / 3);
+    overflow: scroll;
 }
 
 .designit-lg img {
